--- a/source/helpers/colors.css
+++ b/source/helpers/colors.css
@@ -6,6 +6,7 @@ $black-light: #181920;
 
 $grey-dark: #666576;
 $grey-darker: #32313E;
+$grey-blue: #454D64;
 $table-border-color: #556276;
 
 $purple: #754FBA;
