--- a/source/elements/button/button.css
+++ b/source/elements/button/button.css
@@ -13,6 +13,13 @@
     cursor: pointer;
     transition: background-color .25s;
     text-transform: uppercase;
+    box-sizing: border-box;
+    &_large {
+        line-height: 50px;
+        height: 50px;
+        font-size: 14px;
+        padding: 0 50px;
+        }
     &:focus,
     &:hover {
         background-color: color($purple l(-10%));
