--- a/source/elements/hints/hints.jade
+++ b/source/elements/hints/hints.jade
@@ -1,4 +1,4 @@
-section.hints
+section.hints(role="note")
     h2.hints__title Some hints about profile
 
     p.hints__text Just edit the password field and hit save
