--- a/source/elements/text/text.jade
+++ b/source/elements/text/text.jade
@@ -71,3 +71,9 @@
     p Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals. Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals.
 
     p Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals. Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals.
+
+    img(src="images/illustration.jpg", alt="illustration")
+
+    p Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals. Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals.
+
+    p Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals. Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals.
