--- a/source/elements/account/account.jade
+++ b/source/elements/account/account.jade
@@ -12,4 +12,4 @@ form.account(action="/update", method="post", role="form")
         label.account__label(for="account-date") Date of Birth
         input.account__input.account__input_date(type="text", name="date" id="account-date", placeholder="1940-05-02", value="", required="required", role="input")
     menu.account__menu(role="menu")
-        button.button.button_large(type="submit", role="button") Update
+        button.button.button_submit(type="submit", role="button") Update
