--- a/source/elements/text/text.jade
+++ b/source/elements/text/text.jade
@@ -48,27 +48,29 @@
                 th Title 3
         tbody
             tr
-                td Value 1
-                td Value 1
-                td Value 1
+                td(data-th="Title 1") Value 1
+                td(data-th="Title 2") Value 2
+                td(data-th="Title 3") Value 3
             tr
-                td Value 1
-                td Value 1
-                td Value 1
+                td(data-th="Title 1") Value 1
+                td(data-th="Title 2") Value 2
+                td(data-th="Title 3") Value 3
             tr
-                td Value 1
-                td Value 1
-                td Value 1
+                td(data-th="Title 1") Value 1
+                td(data-th="Title 2") Value 2
+                td(data-th="Title 3") Value 3
             tr
-                td Value 1
-                td Value 1
-                td Value 1
+                td(data-th="Title 1") Value 1
+                td(data-th="Title 2") Value 2
+                td(data-th="Title 3") Value 3
             tr
-                td Value 1
-                td Value 1
-                td Value 1
+                td(data-th="Title 1") Value 1
+                td(data-th="Title 2") Value 2
+                td(data-th="Title 3") Value 3
 
     p Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals. Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals.
+
+    h2 Title of text block
 
     p Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals. Any official ID issued by your country, such as a Passport or Drivers License. Only needed for withdrawals.
 
