--- a/source/pages/transactions.jade
+++ b/source/pages/transactions.jade
@@ -23,22 +23,22 @@ block content
             while i > 0
                 - i--
                 tr
-                    td 
+                    td(data-th="Contest")
                         a.content__table-link(href="#") 
-                            img.content__table-icon(src="images/Dota2Logo.svg", alt="Иконка")
-                            | $1M+ in Prizes for Dota2 International Finals 
-                    td 
+                            img.content__table-icon(src="images/Dota2Logo.svg", alt="Date")
+                            span $1M+ in Prizes for Dota2 International Finals 
+                    td(data-th="Score")
                         time(datetime="2015-09-13T11:00Z") 9/13 11:00AM
-                    td 112233445566
-                    td $100000
-                    td
+                    td(data-th="Transaction ID") 112233445566
+                    td(data-th="Debit") $100000
+                    td(data-th="Credit")
                 tr
-                    td 
+                    td(data-th="Contest")
                         a.content__table-link(href="#") 
                             img.content__table-icon(src="images/Dota2Logo.svg", alt="Иконка")
-                            | $1M+ in Prizes for Dota2 International Finals 
-                    td 
+                            span $1M+ in Prizes for Dota2 International Finals 
+                    td(data-th="Date")
                         time(datetime="2015-09-13T11:00Z") 9/13 11:00AM
-                    td 112233445566
-                    td 
-                    td $100000
+                    td(data-th="Transaction ID") 112233445566
+                    td(data-th="Debit") 
+                    td(data-th="Credit") $100000
