--- a/source/pages/upcoming.jade
+++ b/source/pages/upcoming.jade
@@ -22,18 +22,18 @@ block content
                 th
         tbody
             tr
-                td 
+                td(data-th="Contest")
                     a.content__table-link(href="#") 
                         img.content__table-icon(src="images/Dota2Logo.svg", alt="Иконка")
-                        | $1M+ in Prizes for Dota2 International Finals 
+                        span $1M+ in Prizes for Dota2 International Finals 
                 td 
                     +entries('M')
-                td 
+                td(data-th="Entries")
                     strong 20 
                     | / 789123567
-                td $100000
-                td
+                td(data-th="Prizes") $100000
+                td(data-th="Starts")
                     time(datetime="2015-09-13T11:00Z") 2h 10m
-                td $1999
+                td(data-th="Fee") $1999
                 td
-                    button.button(type="button") Edit
+                    a.button(href="edit.html", role="link") Edit
