--- a/source/elements/account/account.css
+++ b/source/elements/account/account.css
@@ -1,10 +1,12 @@
 @import "../../helpers/*";
 
 .account {
-    width: 440px;
-    margin: 0 20px 20px;
+    width: 480px;
+    margin: 0 0 20px;
+    padding: 0 20px;
     float: left;
     @mixin clear;
+    box-sizing: border-box;
     &__fieldset {
         width: 200px;
         margin: 0 20px 20px 0;
@@ -22,3 +24,16 @@
         width: 100%;
         }
     }
+
+@media ( max-width: 460px ) {
+    html body {
+        .account {
+            width: 100%;
+            &__fieldset {
+                width: auto;
+                float: none;
+                margin: 0 0 20px;
+            }
+        }
+    }
+}
