--- a/source/elements/balance/balance.jade
+++ b/source/elements/balance/balance.jade
@@ -14,4 +14,4 @@ form.balance(action="/add/", method="post", role="form")
         input.balance__radio-input(type="radio", name="summ", id="b100", value="100", required="required", role="radio")
         label.balance__radio-label(for="b100") $100
     p(role="note").balance__note To pay with Paypal, please select the amount above, and then click the deposit button below. Once your payment is completed, you will be directed back here.
-    button.button.button_large(type="submit", role="button") Add funds
+    button.button.button_submit(type="submit", role="button") Add funds
