--- a/source/elements/button/button.css
+++ b/source/elements/button/button.css
@@ -14,7 +14,20 @@
     transition: background-color .25s;
     text-transform: uppercase;
     box-sizing: border-box;
-    &_large {
+    text-decoration: none;
+    text-align: center;
+    &_remove,
+    &_add {
+        border-radius: 100%;
+        padding: 0;
+        width: 24px;
+        height: 24px;
+        line-height: 24px;
+        text-align: center;
+        vertical-align: middle;
+        font-weight: normal;
+        }
+    &_submit {
         line-height: 50px;
         height: 50px;
         font-size: 14px;
