--- a/source/helpers/colors.css
+++ b/source/helpers/colors.css
@@ -10,3 +10,10 @@ $grey-blue: #454D64;
 $table-border-color: #556276;
 
 $purple: #754FBA;
+
+$blue: #1d283c;
+$dark-blue: #152135;
+$glow: #344D76;
+$cyan: #B0BDD1;
+$text-blue: #385480;
+$cyan-dark: #384d70;
