--- a/source/elements/navigation/navigation.css
+++ b/source/elements/navigation/navigation.css
@@ -165,6 +165,7 @@
                 width: 40px;
                 height: 40px;
                 background: url(../images/menu.svg) 50% 50% no-repeat;
+                background-size: 30px auto;
                 z-index: 6;
 
                 transition: transform .25s;
