--- a/source/helpers/mixins.css
+++ b/source/helpers/mixins.css
@@ -42,6 +42,19 @@
     }
   }
 
+@define-mixin clear_input {
+    background: none;
+    border-style: none;
+    padding: 0;
+    margin: 0;
+    overflow: visible;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    vertical-align: middle;
+    border-radius: 0;
+    }
+
 @define-mixin input {
     background: color($purple a(20%));
     border-style: none;
