--- a/source/elements/layout/layout-landing.jade
+++ b/source/elements/layout/layout-landing.jade
@@ -8,6 +8,12 @@ html(lang="en")
             title Fantasy Ninja
 
         script(src="js/modernizr.js")
+        script(src="js/classList.js/classList.min.js")
+        script(src="js/es5-shim/es5-shim.min.js")
+        script(src="js/es5-shim/es5-sham.min.js")
+        script(src="js/promise-polyfill/Promise.min.js")
+        script(src="js/isie.js")
+
         link(rel="stylesheet", href="css/styles.css")
     body.landing-bg
         block content
