--- a/source/elements/landing-popup/landing-popup.css
+++ b/source/elements/landing-popup/landing-popup.css
@@ -143,6 +143,9 @@
 @media (max-width: 600px) {
     html body {
         .landing-popup {
+            position: relative;
+            min-height: 100vh;
+            box-sizing: border-box;
             width: auto;
             height: auto;
             border-radius: 0;
