--- a/source/elements/landing/landing.jade
+++ b/source/elements/landing/landing.jade
@@ -1,4 +1,4 @@
-main.landing
+main.landing(data-video="video/tanks.mp4,video/tanks.webm", data-video-width="1280", data-video-height="720")
     header.landing__header
         .landing__wrapper
 
